# mreg-tools

./: .gitignore  .pre-commit-config.yml  CHANGELOG.md  LICENSE  README.md  TODO  mreg-tools.toml.example  pyproject.toml  requirements.txt
common/: LDIFutils.py  connection.py  utils.py
get-dhcphosts/: get-dhcphosts.conf.example  get-dhcphosts.py
get-hostinfo/: get-hostinfo.conf.example  get-hostinfo.py
get-hostpolicy/: get-hostpolicy.conf.example  get-hostpolicy.py
get-zonefiles/: get-zonefiles.conf.example  get-zonefiles.py  requirements.txt
hostgroup-ldif/: hostgroup-ldif.conf.example  hostgroup-ldif.py
hosts-ldif/: hosts-ldif.conf.example  hosts-ldif.py
mreg_tools/: __about__.py  __init__.py  __main__.py  _patches.py  api.py  app.py  config.py  constants.py  exceptions.py  locks.py  logs.py  main.py  types.py  utils.py
mreg_tools/commands/: __init__.py  get-dhcphosts.py  get-hostinfo.py  get-hostpolicy.py  get-zonefiles.py  get_dhcphosts.py  get_hostinfo.py  get_hostpolicy.py  get_zonefiles.py  hostgroup-ldif.py  hostgroup_ldif.py  hosts-ldif.py  hosts_ldif.py  network-import.py  network-ldif.py  network_import.py  network_ldif.py
mreg_tools/common/: LDIFutils.py  __init__.py  base.py  connection.py  ldif.py  utils.py
mreg_tools/output/: __init__.py  output.py  style.py  theme.py
network-import/: network-import.conf.example  network-import.py  requirements.txt  tags.txt.example
network-ldif/: network-ldif.conf.example  network-ldif.py
tests/: test_config.py
tests/commands/: test_network_import.py
zone-import/: .swp  zoneimport.py
