[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mreg-tools"
version = "1.0.0"
description = "Various scripts for use with mreg"
readme = "README.md"
maintainers = [
    # Active maintainers
    { name = "Terje Kvernes", email = "terjekv@uio.no" },
    { name = "Øyvind Hagberg", email = "oyvihag@uio.no" },
    { name = "Peder Hovdan Andresen", email = "pederhan@uio.no" },
]
authors = [
    # Historical authors
    { name = "Øyvind Kolbu", email = "oyvind.kolbu@usit.uio.no" },
]

requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fasteners>=0.20.0",
    "iso8601>=2.1.0",
    "intervaltree>=3.2.1",
    "requests>=2.32.5",
    "typer>=0.21.1",
    "dnspython>=2.8.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.12.0",
    "platformdirs>=4.5.1",
    "mreg-api",
    "rich>=14.3.1",
    "structlog>=25.5.0",
]
[project.scripts]
mreg-tools = "mreg_tools.__main__:main"

[project.urls]
Repository = 'https://github.com/unioslo/mreg-tools/'

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
]

[tool.pyright]
reportUnusedCallResult = "information"
reportImportCycles = "information"

[tool.ruff]
line-length = 90
target-version = "py313"

[tool.ruff.lint.isort]
# Force one line per import to simplify diffing and merging
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    # "ANN", # annotations
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "D",   # pydocstyle
    "DJ",  # flake8-django
    "E",   # error
    "F",   # Pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "INP", # flake8-no-pep420 (implicit namespace packages, you need __init__.py)
    #    "PL", # pylint (all of the below)
    "PLC", # pylint-convention
    "PLE", # pylint-error
    # "PLR", # pylint-refactor
    # "PLW", # pylint-warning
    "W", # warnings
]
ignore = [
    # B905 (`zip()` without an explicit `strict=` parameter) is incompatible with older python versions.
    "B905",
    # D203 (1 blank line required before class docstring) is incompatible with
    # D211 (No blank lines allowed before class docstring). We ignore D203.
    "D203",
    # D213 (Multi-line docstring summary should start at the second line) is incompatible with
    # D212 (Multi-line docstring summary should start at the first line). We ignore D213.
    "D213",

    # Rules disabled due to using ruff as a formatter. Most of these rules
    # will thus be enforced by the formatter.
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # Indentation contains tabs
    "E111",   # Indentation is not a multiple of four
    "E114",   # Indentation is not a multiple of four (comment)
    "E117",   # Over-indented
    "D206",   # Docstring should be indented with spaces, not tabs
    "D300",   # Use """triple double quotes""" (found '''-quotes)
    "Q000",   # Remove bad quotes (inlined)
    "Q001",   # Remove bad quotes (multiline)
    "Q002",   # Remove bad quotes (docstring)
    "Q003",   # Avoidable escape quote
    "COM812", # Missing trailing comma in Python 3.6+
    "COM819", # Prohibited trailing comma
    "ISC001", # Implicit string concatenation (single line)
    "ISC002", # Implicit string concatenation (multiline)
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D103", "E501", "D100", "D104"]

[tool.uv.build-backend]
module-name = "mreg_tools"
module-root = ""

[tool.uv.sources]
mreg-api = { git = "https://github.com/unioslo/mreg-api" }
